monitor/grafana-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    networking.gke.io/managed-certificates: "grafana-certificate"
    kubernetes.io/ingress.global-static-ip-name: "juice-shop-static-ip"
spec:
  rules:
  - host: "grafana.34.107.194.151.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
